Remove generics from executables framework
Co-authored-by: Enrico Persiani <enrico.persiani@metatis.com>